--- a/frontend/english-sentences/src/app/app.component.html
+++ b/frontend/english-sentences/src/app/app.component.html
@@ -1,22 +1,25 @@
 <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
   <ul class = "navbar-nav">
     <li class = "nav-item">
-      <a routerLink="employees" routerLinkActive="active" class="nav-link" >Employee List</a>
+      <a routerLink="sentences" routerLinkActive="active" class="nav-link" >sentences</a>
     </li>
     <li class = "nav-item">
-      <a routerLink="create-employee" routerLinkActive="active" class="nav-link" >Add Employee</a>
+      <a routerLink="create-sentence" routerLinkActive="active" class="nav-link" >Add Employee</a>
     </li>
+    <li class = "nav-item">
+      <a routerLink="main" routerLinkActive="active" class="nav-link" >main</a>
+    </li>
+
   </ul>
 </nav>
 
 <h1 class="text-center"> {{title}} </h1>
 <div class = "container">
-  <app-main></app-main>
-  <app-sentence-list></app-sentence-list>
+  <router-outlet></router-outlet>
 </div>
 
 <footer class = "footer">
   <div class = "container">
-    <span>Jakub Chyła app</span>
+    <a href="https://github.com/Jakub686/EnglishSentences">Source code</a>
   </div>
 </footer>
