--- a/frontend/english-sentences/src/styles.css
+++ b/frontend/english-sentences/src/styles.css
@@ -5,8 +5,9 @@
   position: absolute;
   bottom: 0;
   width:100%;
-  height: 40px;
+  height: 60px;
   background-color: blue;
   text-align: center;
-  color: white;
+  font-size: 30px;
+  color: black;
 }
