--- a/frontend/english-sentences/src/app/app.component.html
+++ b/frontend/english-sentences/src/app/app.component.html
@@ -4,7 +4,7 @@
       <a routerLink="sentences" routerLinkActive="active" class="nav-link" >sentences</a>
     </li>
     <li class = "nav-item">
-      <a routerLink="create-sentence" routerLinkActive="active" class="nav-link" >Add Employee</a>
+      <a routerLink="create-sentence" routerLinkActive="active" class="nav-link" >Add Sentece</a>
     </li>
     <li class = "nav-item">
       <a routerLink="main" routerLinkActive="active" class="nav-link" >main</a>
