--- a/frontend/english-sentences/src/app/create-sentence/create-sentence.component.html
+++ b/frontend/english-sentences/src/app/create-sentence/create-sentence.component.html
@@ -1,8 +1,10 @@
+<div class="col-md-6 offset-md-3">
 <h3> Create sentence</h3>
   <form (ngSubmit)="onSubmit()">
     <div class="form-group">
       <label>text</label>
       <input type="text" class="form-control" id="text" [(ngModel)] = "sentence.text" name="text">
     </div>
-    <button class="btn btn-success" type="submit"> Submit</button>
+    <button class = "btn btn-success" type ="submit">Submit</button>
   </form>
+</div>
