--- a/frontend/english-sentences/src/app/update-sentence/update-sentence.component.html
+++ b/frontend/english-sentences/src/app/update-sentence/update-sentence.component.html
@@ -1,1 +1,10 @@
-<p>update-sentence works!</p>
+<div class="col-md-6 offset-md-3">
+  <h3> Update sentence</h3>
+  <form (ngSubmit)="onSubmit()">
+    <div class="form-group">
+      <label>text</label>
+      <input type="text" class="form-control" id="text" [(ngModel)] = "sentence.text" name="text">
+    </div>
+    <button class = "btn btn-success" type ="submit">Submit</button>
+  </form>
+</div>
