--- a/frontend/english-sentences/src/app/main/main.component.html
+++ b/frontend/english-sentences/src/app/main/main.component.html
@@ -1,1 +1,8 @@
-<p>main works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12 text-center">
+      <h3>{{sentence.text}}</h3>
+      <div><button (click)="randomSentence()" class="btn btn-success" style="margin-left: 10px">random sentence</button></div>
+    </div>
+  </div>
+</div>
