--- a/frontend/english-sentences/src/app/sentence-list/sentence-list.component.html
+++ b/frontend/english-sentences/src/app/sentence-list/sentence-list.component.html
@@ -1,4 +1,12 @@
 <h2>Sentence list</h2>
+<form (ngSubmit)="onSubmit()">
+  <div class="form-group">
+    <label>text</label>
+    <input type="text" class="form-control" id="text"  name="text">
+  </div>
+  <button class = "btn btn-success" type ="submit">Search</button>
+</form>
+
 <table class="table table-striped">
   <thead>
   <tr>
