--- a/frontend/english-sentences/src/app/sentence-details/sentence-details.component.html
+++ b/frontend/english-sentences/src/app/sentence-details/sentence-details.component.html
@@ -1,6 +1,13 @@
 <h3> View Sentence Details</h3>
 <div>
   <div>
-    <label><b>text:</b></label> {{sentence.text}}
+    <label><b>text:</b></label> {{sentence.textEn}}
   </div>
+  <div>
+    <label><b>text:</b></label> {{sentence.translationToPl[0].textPl}}
+  </div>
+  <div>
+    <label><b>text:</b></label> {{sentence.translationToPl[1].textPl}}
+  </div>
+
 </div>
