--- a/frontend/english-sentences/src/app/create-sentence/create-sentence.component.html
+++ b/frontend/english-sentences/src/app/create-sentence/create-sentence.component.html
@@ -3,7 +3,7 @@
   <form (ngSubmit)="onSubmit()">
     <div class="form-group">
       <label>text</label>
-      <input type="text" class="form-control" id="text" [(ngModel)] = "sentence.text" name="text">
+      <input type="text" class="form-control" style="background-color: red;" id="text" [(ngModel)] = "sentence.textEn" name="text">
     </div>
     <button class = "btn btn-success" type ="submit">Submit</button>
   </form>
