--- a/frontend/english-sentences/src/app/main/main.component.html
+++ b/frontend/english-sentences/src/app/main/main.component.html
@@ -1,7 +1,15 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-12 text-center">
-      <h3>{{sentence.text}}</h3>
+      <div>
+        <label><b>text:</b></label> {{sentence.textEn}}
+      </div>
+      <div>
+        <label><b>text:</b></label> {{sentence.translationToPl[0].textPl}}
+      </div>
+      <div>
+        <label><b>text:</b></label> {{sentence.translationToPl[1].textPl}}
+      </div>
       <div><button (click)="randomSentence()" class="btn btn-success" style="margin-left: 10px">random sentence</button></div>
     </div>
   </div>
