--- a/frontend/english-sentences/src/app/main/main.component.html
+++ b/frontend/english-sentences/src/app/main/main.component.html
@@ -10,7 +10,7 @@
       <div>
         <label><b>text:</b></label> {{sentence.translationToPl[1].textPl}}
       </div>
-      <div><button (click)="randomSentence()" class="btn btn-success" style="margin-left: 10px">random sentence</button></div>
+      <div><button (click)="randomSentence()" class="random" style="margin-left: 10px">random sentence</button></div>
     </div>
   </div>
 </div>
