--- a/frontend/english-sentences/src/app/app.component.css
+++ b/frontend/english-sentences/src/app/app.component.css
@@ -1,39 +1,34 @@
-section {
-  display: table;
+
+.grid-item {
+  font-weight: 500;
+  color: white;
+  font-size: 16px;
+  padding: 10px;
+  text-align: center;
 }
 
-.example-label {
-  display: table-cell;
-  font-size: 14px;
-  margin-left: 8px;
-  min-width: 120px;
+.item-1 {
+  background: #F59E0B;
 }
 
-.example-button-row {
-  display: table-cell;
-  max-width: 600px;
+.item-2 {
+  background: #F59E0B;
 }
 
-.example-button-row .mat-mdc-button-base {
-  margin: 8px 8px 8px 0;
+.item-3 {
+  background: #F59E0B;
 }
 
-.example-flex-container {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
+
+.footer1 {
+  position: sticky;
+  top: 80%;
 }
 
-.example-button-container {
-  display: flex;
-  justify-content: center;
-  width: 120px;
-}
+.grid-wrapper {
+  text-align: center;
+  display: grid;
+  grid-template-columns: 150px 150px 150px;
+  grid-gap: 10px;
 
-.container{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 30px;
 }
