--- a/frontend/english-sentences/src/styles.css
+++ b/frontend/english-sentences/src/styles.css
@@ -1,2 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
 /*@import "~bootstrap/dist/css/bootstrap.min.css";*/
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;500&display=swap');
+
+
+.body{
+  background: #1F2937;
+  color: white;
+  font-family: 'Poppins', sans-serif;
+  text-align: center;
+}
+.header{
+  background: #1F2937;
+  color: white;
+  font-family: 'Poppins', sans-serif;
+}
+
