--- a/frontend/english-sentences/src/app/app.component.css
+++ b/frontend/english-sentences/src/app/app.component.css
@@ -2,9 +2,12 @@
 .grid-item {
   font-weight: 500;
   color: white;
-  font-size: 16px;
-  padding: 10px;
+  font-size: 20px;
   text-align: center;
+  border-radius: 20px;
+  padding: 10px 10px;
+  border: none;
+  display: block;
 }
 
 .item-1 {
@@ -31,4 +34,24 @@
   grid-template-columns: 150px 150px 150px;
   grid-gap: 10px;
 
+}
+
+footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 50px;
+  background-color: #f5f5f5;
+}
+
+.footer1 {
+  text-align: center;
+  line-height: 50px;
+  font-size: 22px;
+}
+
+a {
+  color: #333;
+  text-decoration: none;
 }
