--- a/frontend/english-sentences/src/app/main/main.component.css
+++ b/frontend/english-sentences/src/app/main/main.component.css
@@ -2,10 +2,34 @@
   background-color: #4CAF50; /* Green */
   border: none;
   color: white;
+  margin: 20px;
   padding: 20px 40px; /* Adjust as needed */
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
   border-radius: 20px; /* Adjust as needed */
+  box-shadow: 0  3px 5px #999;
 }
+
+.random:hover {background-color: #3e8e41}
+
+.random:active {
+  background-color: #3e8e41;
+  box-shadow: 0 3px 5px #666;
+  transform: translateY(4px);
+}
+
+.rounded {
+  background-color: floralwhite;
+  border-radius: 20px;
+  color: black;
+  padding: 7px 14px;
+  font-size: 16px;
+  border: none;
+  display: block;
+  margin-right: 10px;
+}
+
+
+
