--- a/frontend/english-sentences/src/app/sentence-list/sentence-list.component.html
+++ b/frontend/english-sentences/src/app/sentence-list/sentence-list.component.html
@@ -1,32 +1,26 @@
 <h2>Sentence list</h2>
 <form (ngSubmit)="onSubmit()">
-  <div class="form-group">
-    <label>text</label>
-    <input type="text" class="form-control" id="text" [(ngModel)] = "sentence.textEn"  name="text">
+  <div >
+    <input type="text" class="rounded-input" id="text" [(ngModel)] = "sentence.textEn"  name="text">
   </div>
-  <button class = "btn btn-success" type ="submit">Search</button>
+  <button class="btn-search" type ="submit">Search</button>
 </form>
 
-<table class="table table-striped">
+<table class="">
   <thead>
   <tr>
-    <th> Id</th>
     <th> text</th>
     <th> actions</th>
   </tr>
   </thead>
   <tbody>
   <tr *ngFor="let sentence of sentences">
-    <td> {{sentence.id}} </td>
-    <td> {{sentence.textEn}} </td>
-<!--    <td> {{sentence.translationToPl.textPl}} </td>-->
+    <td class="rounded"> {{sentence.textEn}} </td>
     <td>
-      <button (click)="updateSentence(sentence.id)" class="btn btn-info">update</button>
-      <button (click)="deleteSentence(sentence.id)" class="btn btn-danger" style="margin-left: 10px">delete</button>
-      <button (click)="detailsSentence(sentence.id)" class="btn btn-info" style="margin-left: 10px">detail</button>
+      <button class="btn-update" (click)="updateSentence(sentence.id)">update</button>
+      <button class="btn-delete" (click)="deleteSentence(sentence.id)" style="margin-left: 10px">delete</button>
+      <button class="btn-detail" (click)="detailsSentence(sentence.id)" style="margin-left: 10px">detail</button>
     </td>
-
   </tr>
   </tbody>
-
 </table>
