--- a/frontend/english-sentences/src/app/main/main.component.html
+++ b/frontend/english-sentences/src/app/main/main.component.html
@@ -3,13 +3,13 @@
     <div class="col-sm-12 text-center">
       <div class="rounded">
         <b>EN:</b> {{sentence.textEn}}
-      </div>
+      </div><p>
       <div class="rounded">
         <b>PL:</b> {{sentence.translationToPl[0].textPl}}
-      </div>
+      </div><p>
       <div class="rounded">
         <b>PL:</b> {{sentence.translationToPl[1].textPl}}
-      </div>
+      </div><p>
       <div><button (click)="randomSentence()" class="random" style="margin-left: 10px">random sentence</button></div>
     </div>
   </div>
