--- a/frontend/english-sentences/src/app/sentence-details/sentence-details.component.html
+++ b/frontend/english-sentences/src/app/sentence-details/sentence-details.component.html
@@ -1,12 +1,12 @@
 <h3> View Sentence Details</h3>
 <div>
-  <div>
+  <div class="rounded">
     <label><b>text:</b></label> {{sentence.textEn}}
-  </div>
-  <div>
+  </div><p>
+  <div class="rounded">
     <label><b>text:</b></label> {{sentence.translationToPl[0].textPl}}
-  </div>
-  <div>
+  </div><p>
+  <div class="rounded">
     <label><b>text:</b></label> {{sentence.translationToPl[1].textPl}}
   </div>
 
