--- a/frontend/english-sentences/src/app/main/main.component.css
+++ b/frontend/english-sentences/src/app/main/main.component.css
@@ -27,7 +27,7 @@
   padding: 7px 14px;
   font-size: 16px;
   border: none;
-  display: block;
+  display: inline-block;
   margin-right: 10px;
 }
 
