--- a/frontend/english-sentences/src/app/sentence-list/sentence-list.component.html
+++ b/frontend/english-sentences/src/app/sentence-list/sentence-list.component.html
@@ -6,7 +6,7 @@
   <button class="btn-search" type ="submit">Search</button>
 </form>
 
-<table class="">
+<table>
   <thead>
   <tr>
     <th> text</th>
