--- a/frontend/english-sentences/src/app/main/main.component.css
+++ b/frontend/english-sentences/src/app/main/main.component.css
@@ -1,14 +1,12 @@
 .grid-wrapper-main {
   text-align: center;
   display: grid;
-  grid-template-rows: 50px 50px 50px;
-  grid-gap: 10px;
-  text-indent: initial;
-  border-collapse: separate;
-  text-decoration: none;
+  grid-gap: 50px;
+
+
 }
 
-.random{
+.random {
   background-color: #4CAF50; /* Green */
   border: none;
   color: white;
@@ -19,10 +17,12 @@
   display: inline-block;
   font-size: 16px;
   border-radius: 20px; /* Adjust as needed */
-  box-shadow: 0  3px 5px #999;
+  box-shadow: 0 3px 5px #999;
 }
 
-.random:hover {background-color: #3e8e41}
+.random:hover {
+  background-color: #3e8e41
+}
 
 .random:active {
   background-color: #3e8e41;
@@ -34,11 +34,10 @@
   background-color: floralwhite;
   border-radius: 20px;
   color: black;
+  margin: 3px;
   padding: 7px 14px;
   font-size: 16px;
-  border: none;
   display: inline-block;
-  margin-right: 10px;
 }
 
 
