--- a/frontend/english-sentences/src/app/main/main.component.html
+++ b/frontend/english-sentences/src/app/main/main.component.html
@@ -1,19 +1,21 @@
 <div class="grid-wrapper-main">
-  <div class="rounded">
-    <b>EN:</b> {{sentence.textEn}}
-  </div>
 
-  <div class="rounded">
-    <b>PL:</b> {{sentence.translationToPl[0].textPl}}
-  </div>
-
-  <div class="rounded">
-    <b>PL:</b> {{sentence.translationToPl[1].textPl}}
-  </div>
-
-  <div>
-    <button (click)="randomSentence()" class="random" style="margin-left: 10px">random sentence</button>
-  </div>
+  <table>
+    <tbody>
+    <tr >
+      <td class="rounded"> En: {{sentence.textEn}} </td>
+    </tr>
+    <tr >
+      <td class="rounded">Pl: {{sentence.translationToPl[0].textPl}} </td>
+    </tr>
+    <tr >
+      <td class="rounded">Pl: {{sentence.translationToPl[1].textPl}} </td>
+    </tr>
+    <tr >
+      <button (click)="randomSentence()" class="random" style="margin-left: 10px">random sentence</button>
+    </tr>
+    </tbody>
+  </table>
 </div>
 
 
