--- a/frontend/english-sentences/src/app/sentence-list/sentence-list.component.css
+++ b/frontend/english-sentences/src/app/sentence-list/sentence-list.component.css
@@ -47,18 +47,20 @@
   font-size: 16px;
   border: none;
   display: inline-block;
-  margin-right: 10px;
+  margin: 3px 10px 3px 0px;
+
 }
 
 .rounded-input {
   background-color: floralwhite;
   border-radius: 20px;
   color: black;
-  padding: 7px 270px;
+  padding: 7px 20px;
   font-size: 16px;
   border: none;
   display: inline-block;
   margin-right: 10px;
+  width: 500px;
 }
 
 table{
