--- a/frontend/english-sentences/src/app/sentence-details/sentence-details.component.html
+++ b/frontend/english-sentences/src/app/sentence-details/sentence-details.component.html
@@ -1,13 +1,13 @@
 <h3> View Sentence Details</h3>
 <div>
   <div class="rounded">
-    <label><b>text:</b></label> {{sentence.textEn}}
+    <label><b>En: </b></label> {{sentence.textEn}}
   </div><p>
   <div class="rounded">
-    <label><b>text:</b></label> {{sentence.translationToPl[0].textPl}}
+    <label><b>Pl: </b></label> {{sentence.translationToPl[0].textPl}}
   </div><p>
   <div class="rounded">
-    <label><b>text:</b></label> {{sentence.translationToPl[1].textPl}}
+    <label><b>Pl: </b></label> {{sentence.translationToPl[1].textPl}}
   </div>
 
 </div>
