--- a/frontend/english-sentences/src/app/create-sentence/create-sentence.component.css
+++ b/frontend/english-sentences/src/app/create-sentence/create-sentence.component.css
@@ -6,8 +6,6 @@
   font-size: 16px;
   border: none;
   display: inline-block;
-  margin-right: 10px;
-  width: 500px;
 }
 
 .btn-submit {
@@ -19,4 +17,23 @@
   border: none;
   cursor: pointer;
   margin: 5px
+}
+
+.rounded {
+  background-color: floralwhite;
+  border-radius: 20px;
+  color: black;
+  font-size: 16px;
+  padding: 0px 180px;
+  border: none;
+  display: inline-block;
+  font-family: 'Poppins', sans-serif;
+}
+
+.grid-wrapper-main {
+  text-align: center;
+  display: grid;
+  grid-gap: 7px;
+  justify-content: center;
+  align-content: center;
 }
