--- a/frontend/english-sentences/src/app/app.component.css
+++ b/frontend/english-sentences/src/app/app.component.css
@@ -22,6 +22,10 @@
   background: #F59E0B;
 }
 
+.item-4 {
+  background: #F59E0B;
+}
+
 
 .footer1 {
   position: sticky;
@@ -31,7 +35,7 @@
 .grid-wrapper {
   text-align: center;
   display: grid;
-  grid-template-columns: 150px 150px 150px;
+  grid-template-columns: 155px 155px 170px 155px;
   grid-gap: 10px;
 }
 
