--- a/frontend/english-sentences/src/app/app.component.html
+++ b/frontend/english-sentences/src/app/app.component.html
@@ -7,7 +7,10 @@
         <a routerLink="sentences" routerLinkActive="active" class="nav-link">Sentences</a>
     </div>
     <div class="grid-item item-3">
-      <a routerLink="create-sentence" routerLinkActive="active" class="nav-link">Add Sentece</a>
+      <a routerLink="create-sentence" routerLinkActive="active" class="nav-link">Add Sentence</a>
+    </div>
+    <div class="grid-item item-4">
+      <a routerLink="login" routerLinkActive="active" class="nav-link">Login</a>
     </div>
   </div>
     <div class="grid-item">
