--- a/frontend/english-sentences/src/app/login/login.component.html
+++ b/frontend/english-sentences/src/app/login/login.component.html
@@ -1,1 +1,18 @@
-<p>login works!</p>
+<h2> Login</h2>
+
+<form (ngSubmit)="onSubmit()">
+  <div class="grid-wrapper-main">
+    <div class="rounded-input">
+      <label>En: </label>
+      <input type="text" class="rounded" [(ngModel)]="sentence.textEn" name="textEn">
+    </div>
+    <div class="rounded-input">
+      <label>Pl: </label>
+      <input type="text" class="rounded" [(ngModel)]="sentence.translationToPl[0].textPl"
+             name="translationToPl[0].textPl">
+    </div>
+  </div>
+  <button class="btn-submit" type="submit">Submit</button>
+</form>
+
+
