--- a/frontend/english-sentences/src/app/app.component.css
+++ b/frontend/english-sentences/src/app/app.component.css
@@ -26,6 +26,10 @@
   background: #F59E0B;
 }
 
+.item-5 {
+  background: #F59E0B;
+}
+
 
 .footer1 {
   position: sticky;
@@ -35,7 +39,7 @@
 .grid-wrapper {
   text-align: center;
   display: grid;
-  grid-template-columns: 155px 155px 170px 155px;
+  grid-template-columns: 155px 155px 170px 155px 155px;
   grid-gap: 10px;
 }
 
