--- a/frontend/english-sentences/src/app/app.component.html
+++ b/frontend/english-sentences/src/app/app.component.html
@@ -12,6 +12,9 @@
     <div class="grid-item item-4">
       <a routerLink="login" routerLinkActive="active" class="nav-link">Login</a>
     </div>
+    <div class="grid-item item-5">
+      <a routerLink="signin" routerLinkActive="active" class="nav-link">Sign in</a>
+    </div>
   </div>
     <div class="grid-item">
       <h1>{{title}}</h1>
