--- a/frontend/english-sentences/src/app/create-sentence/create-sentence.component.html
+++ b/frontend/english-sentences/src/app/create-sentence/create-sentence.component.html
@@ -19,5 +19,6 @@
   </div>
   <button class="btn-submit" type="submit">Submit</button>
 </form>
+<button class="btn-submit" type="submit" (click)="getContent()" >Get secured content</button>
 
 
