--- a/frontend/english-sentences/src/app/main/main.component.css
+++ b/frontend/english-sentences/src/app/main/main.component.css
@@ -40,5 +40,13 @@
   display: inline-block;
 }
 
-
-
+.btn-submit {
+  background-color: #4CAF50;
+  border-radius: 20px;
+  color: white;
+  padding: 10px 20px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+  margin: 5px
+}
