--- a/frontend/english-sentences/src/app/app.component.html
+++ b/frontend/english-sentences/src/app/app.component.html
@@ -1,24 +1,5 @@
 <header class="header">
-  <div class="grid-wrapper">
-    <div class="grid-item item-1">
-        <a routerLink="main" routerLinkActive="active" class="nav-link">Start</a>
-    </div>
-    <div class="grid-item item-2">
-        <a routerLink="sentences" routerLinkActive="active" class="nav-link">Sentences</a>
-    </div>
-    <div class="grid-item item-3">
-      <a routerLink="create-sentence" routerLinkActive="active" class="nav-link">Add Sentence</a>
-    </div>
-    <div class="grid-item item-4">
-      <a routerLink="login" routerLinkActive="active" class="nav-link">Login</a>
-    </div>
-    <div class="grid-item item-5">
-      <a routerLink="signin" routerLinkActive="active" class="nav-link">Sign in</a>
-    </div>
-  </div>
-    <div class="grid-item">
-      <h1>{{title}}</h1>
-    </div>
+<app-topbar></app-topbar>
 </header>
 
 <body class="body">
