--- a/frontend/english-sentences/src/app/topbar/topbar.component.html
+++ b/frontend/english-sentences/src/app/topbar/topbar.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="grid-wrapper">
+  <div class="container1">
     <div class="grid-item">
       <a routerLink="main" routerLinkActive="active" class="nav-link">Start</a>
     </div>
@@ -9,16 +9,29 @@
     <div class="grid-item">
       <a routerLink="create-sentence" routerLinkActive="active" class="nav-link">Add Sentence</a>
     </div>
-    <div class="grid-item">
-      <a routerLink="login" routerLinkActive="active" class="nav-link">Login</a>
-    </div>
-    <div class="grid-item">
+
+  </div>
+  <div class="container2">
+
+
+    <div *ngIf="login === null || login ===''" class="grid-item">
       <a routerLink="signin" routerLinkActive="active" class="nav-link">Sign in</a>
     </div>
+
+    <div *ngIf="login === null || login ===''" class="grid-item">
+      <a routerLink="login" routerLinkActive="active" class="nav-link">Login</a>
+    </div>
+
+    <div *ngIf="!(login === null || login ==='')" class="grid-item">
+      {{login}}
+    </div>
+
+    <div *ngIf="!(login === null || login ==='')" class="grid-item">
+      <a  (click)="logout()" routerLinkActive="active" class="nav-link" style="cursor: pointer;">Logout</a>
+    </div>
   </div>
-  <div class="grid-item">
-    {{login}}  </div>
 </div>
 <div class="title">
   <h1>{{title}}</h1>
 </div>
+<!--<button (click)="logout()" class="btn-submit">logout</button>-->
