--- a/frontend/english-sentences/src/app/sentence-list/sentence-list.component.html
+++ b/frontend/english-sentences/src/app/sentence-list/sentence-list.component.html
@@ -17,8 +17,8 @@
   <tr *ngFor="let sentence of sentences">
     <td class="rounded"> {{sentence.textEn}} </td>
     <td>
-      <button class="btn-update" (click)="updateSentence(sentence.id)">update</button>
-      <button class="btn-delete" (click)="deleteSentence(sentence.id)" style="margin-left: 10px">delete</button>
+      <button *ngIf="role==='ADMIN'" class="btn-update" (click)="updateSentence(sentence.id)">update</button>
+      <button *ngIf="role==='ADMIN'" class="btn-delete" (click)="deleteSentence(sentence.id)" style="margin-left: 10px">delete</button>
       <button class="btn-detail" (click)="detailsSentence(sentence.id)" style="margin-left: 10px">detail</button>
     </td>
   </tr>
