added fav button to list, fix  auth in main component

--- a/frontend/english-sentences/src/app/sentence-list/sentence-list.component.html
+++ b/frontend/english-sentences/src/app/sentence-list/sentence-list.component.html
@@ -11,6 +11,7 @@
   <tr>
     <th> text</th>
     <th> actions</th>
+    <th></th>
   </tr>
   </thead>
   <tbody>
@@ -18,9 +19,13 @@
     <td class="rounded"> {{sentence.textEn}} </td>
     <td>
       <button *ngIf="role==='ADMIN'" class="btn-update" (click)="updateSentence(sentence.id)">update</button>
-      <button *ngIf="role==='ADMIN'" class="btn-delete" (click)="deleteSentence(sentence.id)" style="margin-left: 10px">delete</button>
+      <button *ngIf="role==='ADMIN'" class="btn-delete" (click)="deleteSentence(sentence.id)" style="margin-left: 10px">
+        delete
+      </button>
       <button class="btn-detail" (click)="detailsSentence(sentence.id)" style="margin-left: 10px">detail</button>
     </td>
+    <td (click)="addToFav(sentence.id)" [class]="sentence.id ===1 ? 'fas fa-star text-yellow' : 'fas fa-star'"
+        style="margin-left: 10px; cursor: pointer;"></td>
   </tr>
   </tbody>
 </table>
