finished changing Sentence class

--- a/frontend/english-sentences/src/app/create-sentence/create-sentence.component.html
+++ b/frontend/english-sentences/src/app/create-sentence/create-sentence.component.html
@@ -8,14 +8,10 @@
     </div>
     <div class="rounded-input">
       <label>Pl: </label>
-      <input type="text" class="rounded" [(ngModel)]="sentence.translationToPl[0].textPl"
+      <input type="text" class="rounded" [(ngModel)]="sentence.textPl"
              name="translationToPl[0].textPl">
     </div>
-    <div class="rounded-input">
-      <label>Pl: </label>
-      <input type="text" class="rounded" [(ngModel)]="sentence.translationToPl[1].textPl"
-             name="translationToPl[1].textPl">
-    </div>
+
   </div>
   <button class="btn-submit" type="submit">Submit</button>
 </form>
