--- a/frontend/english-sentences/src/app/sentence-details/sentence-details.component.html
+++ b/frontend/english-sentences/src/app/sentence-details/sentence-details.component.html
@@ -4,10 +4,6 @@
     <label><b>En: </b></label> {{sentence.textEn}}
   </div><p>
   <div class="rounded">
-    <label><b>Pl: </b></label> {{sentence.translationToPl[0].textPl}}
+    <label><b>Pl: </b></label> {{sentence.textPl}}
   </div><p>
-  <div class="rounded">
-    <label><b>Pl: </b></label> {{sentence.translationToPl[1].textPl}}
-  </div>
-
 </div>
