--- a/frontend/english-sentences/src/app/main/main.component.html
+++ b/frontend/english-sentences/src/app/main/main.component.html
@@ -8,14 +8,20 @@
       <td class="rounded">Pl: {{randomDTO.textPl}} </td>
     </tr>
     <tr>
-      <td>
+      <td class="my-fav">
         <i
           *ngIf="email !== '' && role === 'USER'"
           (click)="addToFav(randomDTO.id)"
           [class]="randomDTO.favorite ? 'fas fa-star text-yellow' : 'fas fa-star'"
-          style="margin-left: 10px; cursor: pointer;"
+          style="padding-right: 10px; cursor: pointer; font-size: 24px;"
         ></i>
+
+        <label class="switch">
+          <input type="checkbox" checked>
+          <span class="slider round"></span>
+        </label>
       </td>
+
     </tr>
     <tr>
       <td>
