--- a/frontend/english-sentences/src/app/main/main.component.css
+++ b/frontend/english-sentences/src/app/main/main.component.css
@@ -94,7 +94,7 @@
   width: 26px;
   left: 4px;
   bottom: 4px;
-  background-color: black;
+  background-color: #1F2937;
   -webkit-transition: .4s;
   transition: .4s;
 }
