--- a/frontend/english-sentences/src/app/update-sentence/update-sentence.component.html
+++ b/frontend/english-sentences/src/app/update-sentence/update-sentence.component.html
@@ -5,11 +5,10 @@
       <label>En: </label>
       <input type="text" class="rounded" [(ngModel)]="sentence.textEn" name="textEn">
     </div>
-<!--    <div class="rounded-input">-->
-<!--      <label>Pl: </label>-->
-<!--      <input type="text" class="rounded" [(ngModel)]="sentence.textPl"-->
-<!--             name="translationToPl[0].textPl">-->
-<!--    </div>-->
+    <div class="rounded-input">
+      <label>Pl: </label>
+      <input type="text" class="rounded" [(ngModel)]="sentence.textPl" name="textPl">
+    </div>
   </div>
   <button class="btn-submit" type="submit">Submit</button>
 </form>
